<resources>
    <string name="app_name">Distance Tracker App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_blank_fragment2">Hello blank fragment2</string>
    <string name="continue_text">Continue</string>
    <string name="request_permission_description">Welcome to Distance Tracker. In order to use our application we will first need to request location permission from you, Otherwise we will not be able to provide you with our service. If you agree and wish to continue on the button bellow.</string>
    <string name="permission_required">Permission Required</string>
    <string name="location_image_description">location image description</string>
    <string name="_3">3</string>
    <string name="tap_on_my_location_button">Tap on my location button</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="go">GO</string>
    <string name="distance">Distance</string>
    <string name="_0_0_km">0.0 Km</string>
    <string name="time">Time</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="share">Share</string>
    <string name="result">%1$s km</string>
</resources>